--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>PerseveranceHarvester</name>
     <description>Mars Perseverance images harvester</description>
+	
+	<properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
     
     <dependencies>
         <dependency>
@@ -36,6 +41,11 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>1.28</version>            
+        </dependency>
+        <dependency>
+            <groupId>com.github.rvesse</groupId>
+            <artifactId>airline</artifactId>
+            <version>2.8.1</version>
         </dependency>
     </dependencies>
     
