--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
             <version>2.8.0</version>
         </dependency>
         <dependency>
-            <groupId>com.machinepublishers</groupId>
-            <artifactId>jbrowserdriver</artifactId>
-            <version>1.1.1</version>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.4.0</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
