--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.4.0</version>
+            <version>4.0.0-beta-2</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
