Dependencies versions updated and Java 17 required

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,3 @@
 # Path to the Gecko driver on your system
-webdriver.gecko.driver=C:/Dev/WebDriver/bin/geckodriver.exe
+webdriver.gecko.driver=C:\\Dev\\WebDriver\\bin\\geckodriver.exe
+webdriver.firefox.bin=C:\\Program Files\\Mozilla Firefox\\firefox.exe
