--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.neirrek</groupId>
-    <artifactId>perseverance-harvester</artifactId>
-    <name>PerseveranceHarvester</name>
-    <description>Mars Perseverance images harvester</description>
-    <version>1.0.0-SNAPSHOT</version>
+    <artifactId>mars-harvester</artifactId>
+    <name>MarsHarvester</name>
+    <description>Mars rovers images harvester</description>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     	
     <properties>
@@ -28,7 +28,7 @@
                             <shadedArtifactAttached>false</shadedArtifactAttached>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.neirrek.perseverance.Harvester</mainClass>
+                                    <mainClass>com.neirrek.harvester.MarsHarvester</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
